# python-skeleton

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  environment-arm64.yml  environment.yml  setup.cfg  tox.ini
src/my_package/: __init__.py  goodbye.py  hello.py  model.py
src/mypkg/: data.py  model.py  tf_version.py  train.py
tests/my_package/: test_hello.py  test_model.py
tests/mypkg/: test_data.py  test_model.py
