[metadata]
name = my-package
version = 0.0.1
url = https://github.com/jonaslalin/my-package.git
author = Jonas Lalin
author_email = "Jonas Lalin" <1ac6df24@gmail.com>
description = Lorem ipsum dolor sit amet.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
