[metadata]
name = tensorflow-skeleton
version = 0.0.1
url = https://github.com/jonaslalin/tensorflow-skeleton.git
author = Jonas Lalin
author_email = "Jonas Lalin" <1ac6df24@gmail.com>
description = A TensorFlow skeleton project.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
install_requires =
    tensorflow>=2.8.0,<3; platform_system!='Darwin' or platform_machine!='arm64'
    tensorflow-macos>=2.8.0,<3; platform_system=='Darwin' and platform_machine=='arm64'

[options.packages.find]
where = src
